[gd_scene load_steps=5 format=2]

[ext_resource path="res://monsters/mist.gd" type="Script" id=1]
[ext_resource path="res://art/szornyek/posioncloud.png" type="Texture" id=2]
[ext_resource path="res://weapons/swordaea.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 17.6825

[node name="arrow" type="Sprite" groups=[
"projectile",
]]
position = Vector2( -1.79966, 2.69756 )
rotation = 3.14159
scale = Vector2( 1e-05, 1e-05 )
z_index = 20
texture = ExtResource( 2 )
region_rect = Rect2( 217, 246, 13, 15 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -16.25, -1.62493 )
collision_layer = 4
collision_mask = 4
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 14.5552, 4.52589 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 10.0
autostart = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
